--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ p.bigspace1 {
 
     <h1 class="heading1">I GUESS I'M IN LOVE</h1>
 
-    <img src="cover.JPG"  width="600" height="600" class="center">
+    <img src="cover.jpg"  width="600" height="600" class="center">
 
        <p class="bigspace">Oh, I'm obsessed<br>
          With the way your head is layin' on my chest <br>
